--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation project(path: ':openCVLibrary3415')
+    implementation 'com.google.ar.sceneform:assets:1.17.1'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'org.rajawali3d:rajawali:1.1.970'
-    implementation("com.gorisse.thomas.sceneform:sceneform:1.19.5")
+   // implementation("com.gorisse.thomas.sceneform:sceneform:1.19.5")
 }
